--- a/Farmer_Portal/templates/login.html
+++ b/Farmer_Portal/templates/login.html
@@ -40,7 +40,7 @@
                 <br><br>
                 <a href="">Forgot password?</a><br>
                 <br>
-                new user? Go to <a href="">Sign up</a>
+                new user? Go to <a href="http://127.0.0.1:8000/signup">Sign up</a>
             </center>
         </div>
     </div>
