--- a/Farmer_Portal/templates/signup.html
+++ b/Farmer_Portal/templates/signup.html
@@ -1,82 +1,145 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Sign Up</title>
+    <meta name="description" content="Farmer-login-page" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta http-equiv="author" content="Hackguru" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+      crossorigin="anonymous"
+    />
+    <script
+    src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+    crossorigin="anonymous"
+  ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+      integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<head>
-    <title>Signup Page</title>
-    <meta name="description" content="Farmer-Signup-page">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta http-equiv="author" content="Hackguru">
-    <link rel="stylesheet" type="text/css" href="static/signup.css">
-</head>
+  <body>
 
-<body>
-    <div class="container">
-        <form action="" class="Registration_Page"
-            method="POST">
-            <h2>Registration Page</h2>
-        <div class="signup">
-            <div class="name">
-                <label for="Name" class="Registrationpage">
-                    Name :
-                </label>
-                <input type="text" name="Name" id="Name" placeholder="--Enter Your Name--" required>
-            </div>
-
-            <div class="contact">
-                <br>
-                <label for="Contactno" class="Registrationpage">
-                    Contact No. :
-                </label>
-                <input type="number" name="Contactno" id="Contactno" placeholder="--Enter your Mobile No.--"
-                    required>
-            </div>
-
-            <div class="email">
-                <br>
-                <label for="Email_id" class="Registrationpage">
-                    Email-ID :
-                </label>
-                <input type="email" name="Email" id="Email_id" placeholder="--Enter Your Email id--">
-            </div>
-
-            <div class="address">
-                <br>
-                <label for="Address" class="Registrationpage">
-                    Address:<br> 
-                </label>
-                <textarea id="Address" name="Address" cols="60" rows="10" placeholder="write your full adress here"
-                    required></textarea>
-            </div>
-            
-            <div class="photo">
-                <br>
-                <label for="photo" class="Registration_Page">
-                    Your Photo:
-                </label>
-                <input type="file" id="photo" name="photo" accept="image/*" required>
-            </div>
-
-            <div class="password">
-                <br>
-                <label for="password" class="loginpage2">
-                    Password :
-                </label>
-                <input type="password" id="password" name="password" placeholder="--Password--"
-                    required>
-                <br><br>
-                <label for="Cpassword" class="loginpage2">
-                    Confirm Password :
-                </label>
-                <input type="password" id="Cpassword" name="Cpassword" placeholder="--Password--"  oninput=" Pcheck() " required>
-            </div>
-            <br><br>
-            <center><input type="submit" value="Submit" id="submit">
-            </center>
+    <div class="mt-2 justify-content-center container col-xs-12 col-sm-12 col-md-8 col-xl-6"">
+      <div class="container bg-primary d-flex justify-content-center flex-direction-col rounded shadow-sm" style="height: 100px;">
+        <h2 class="my-auto" style="color: white;">Sign Up</h2>
+      </div>
+      <form
+        action=""
+        method="POST"
+        class="container rounded shadow"
+      >
+        <!-- {% csrf_token %} -->
+        <div class="form-group">
+          <label for="Name" class="col-form-label">
+            Name :
+          </label>
+          <input
+            class="form-control"
+            type="text"
+            name="Name"
+            id="Name"
+            placeholder="Enter Your Name"
+            required
+          />
         </div>
-        </form>
+        <div class="form-group">
+          <label for="Contactno" class="col-form-label">
+            Contact Number :
+          </label>
+          <input
+            class="form-control"
+            type="number"
+            name="Contactno"
+            id="Contactno"
+            placeholder="Enter Contact Number"
+            required
+          />
+        </div>
+
+        <div class="form-group">
+          <label for="Email_id" class="col-form-label">
+            Email-ID :
+          </label>
+          <input
+            class="form-control"
+            type="email"
+            name="Email"
+            id="Email_id"
+            placeholder="Enter your email id"
+            required
+          />
+        </div>
+
+        <div class="form-group">
+          <label for="Address" class="col-form-label">
+            Address:<br />
+          </label>
+          <textarea
+            class="form-control"
+            id="Address"
+            name="Address"
+            rows="3"
+            placeholder="Enter the displayed Address"
+          ></textarea>
+        </div>
+
+        <div class="form-group">
+          <label for="photo" class="col-form-label">
+            Your Photo:
+          </label>
+          <input
+            class="form-control-file"
+            type="file"
+            id="photo"
+            name="photo"
+            accept="image/*"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="password" class="col-form-label">
+            Password :
+          </label>
+          <input
+            class="form-control"
+            type="password"
+            name="password"
+            id="password"
+            placeholder="Enter Password"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="Cpassword" class="col-form-label">
+            Confirm Password :
+          </label>
+          <input
+            class="form-control"
+            type="password"
+            name="Cpassword"
+            id="Cpassword"
+            placeholder="Confirm Password"
+            required
+          />
+
+        <div class="text-center">
+          <input class="btn btn-primary my-2 mh-auto" type="submit" value="Sign Up" id="submit" />
+        </div>
+      </form>
     </div>
-</body>
-<script>
+  </body>
+  <script>
     function Pcheck(){
         element = document.getElementById('password').value;
         element= element.toString();
