--- a/Farmer_Portal/templates/signup.html
+++ b/Farmer_Portal/templates/signup.html
@@ -39,7 +39,7 @@
         method="POST"
         class="container rounded shadow"
       >
-        <!-- {% csrf_token %} -->
+        {% csrf_token %}
         <div class="form-group">
           <label for="Name" class="col-form-label">
             Name :
