--- a/Farmer_Portal/templates/add_item.html
+++ b/Farmer_Portal/templates/add_item.html
@@ -41,6 +41,34 @@
       >
         {% csrf_token %}
         <div class="form-group">
+          <label for="owner" class="col-form-label">
+            Owner Name :
+          </label>
+          <input
+            class="form-control"
+            type="text"
+            name="owner"
+            id="owner"
+            placeholder="Enter Your Name"
+            required
+          />
+        </div>
+
+          <div class="form-group">
+          <label for="contact" class="col-form-label">
+            Contact Number :
+          </label>
+          <input
+            class="form-control"
+            type="number"
+            name="contact"
+            id="contact"
+            placeholder="Enter Your Contact Number"
+            required
+          />
+          </div>
+
+        <div>
           <label for="Name" class="col-form-label">
             Product Name :
           </label>
